--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ body {
   <div style="margin-bottom:60px;">
     <img src="mr.e2.jpg"  width="300" height="200" class="epic2007">
     <img src="1.jpg"      width="300" height="200" class="epic2007" style="margin:0 40px;">
+    <img src="mr.jpg"   width="300" height="200" class="epic2007">
   </div>
 
 </div>
@@ -186,5 +187,6 @@ body {
 </body>
 
 </html>
+
 
 
